<resources>
    <string name="app_name">Tsira News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_to_register">还未注册?</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="lets_login">登录</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="lets_register">注册</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="ai_summary_title">AI摘要：</string>
    <string name="details_title_placeholder">这是用来占位的标题</string>
    <string name="search_placeholder">搜点啥？不保证有哈</string>
    <string name="history_title">历史记录</string>
    <string name="news_card_title_placeholder">Java 大作业已致使多人死亡</string>
    <string name="news_card_publisher_placeholder">华清大学新闻办公室</string>
    <string name="news_card_time_placeholder">1145–1–41 91:98:00</string>
    <string name="history_menu">历史记录</string>
    <string name="home_menu">首页</string>
    <string name="account_menu">账号信息</string>
    <string name="logout_menu">退出登录</string>
    <string name="about_menu">关于APP</string>
    <string name="like_title">我的收藏</string>
    <string name="like_btn_content_description">收藏按钮</string>
    <string name="like_menu">我的收藏</string>
    <string name="ai_summary_placeholder">点击生成摘要</string>
    <string name="category_menu">编辑分类</string>
    <string name="change_password_title">修改密码</string>
    <string name="change_email_title">修改邮箱</string>
    <string name="account_password_placeholder">就不告诉你</string>
    <string name="account_title">账号信息</string>
    <string name="please_input_new_email">请输入新邮箱</string>
    <string name="yes">确定</string>
    <string name="please_input_old_password">请输入原密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码</string>
    <string name="search_title">搜索</string>
    <string name="hint_keyword">关键词：</string>
    <string name="end_date">截止日期</string>
    <string name="start_date">起始日期</string>
    <string name="date_label">日期范围</string>
    <string name="search_button">Go!</string>
    <string name="category_hint">分类</string>
    <string name="search_result_title">搜索结果</string>
    <string name="about_title">关于App</string>
    <string name="remember_me_text">记住密码</string>
</resources>