<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_access_time_filled_24"
            android:title="@string/history_menu" />
        <item
            android:id="@+id/nav_like"
            android:icon="@drawable/like_menu_icon"
            android:title="@string/like_menu" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/category_menu" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/account_menu" />
        <!-- 扎个眼，这块 Android studio 搜不到图标 -->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout_menu" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_menu" />
    </group>
</menu>