<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/changeEmailLlEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_et_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:src="@drawable/email">

        </ImageView>

        <EditText
            android:id="@+id/changeEmailEtrEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/please_input_new_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey"
            android:textSize="15sp">

        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/changeEmailLlPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_et_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/password">

        </ImageView>

        <EditText
            android:id="@+id/changeEmailEtrPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textSize="15sp">

        </EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/changeEmailBtnChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/yes"
        android:textColor="@color/black">

    </Button>
</LinearLayout>