<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetailsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:navigationIcon="@drawable/comeback"
            android:title="@string/details_title_placeholder">
        </Toolbar>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/details_image"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

       <androidx.cardview.widget.CardView
    android:id="@+id/ai_summary_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/ai_summary_title"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/ai_summary"
            android:text="@string/ai_summary_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp">
        </TextView>

    </LinearLayout>
</androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/details_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_btm_bar">

            <TextView
                android:id="@+id/details_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp">

            </TextView>

            <ImageButton
                android:id="@+id/like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/like_btn_content_description"
                android:src="@drawable/like"
                android:tooltipText="收藏"
                >

            </ImageButton>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>